chore: verification not to add a region owner as a region member